<resources>
    <string name="app_name">P13</string>
    <string name="title_activity_edit">EditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="enter_activity">Enter Activity:</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="activity_name">Activity Name:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_schedule">ADD SCHEDULE</string>
    <string name="remove_all">REMOVE ALL</string>
</resources>